--- a/CrazyPandaTestTask2/CrazyPandaTestTask2.vcxproj
+++ b/CrazyPandaTestTask2/CrazyPandaTestTask2.vcxproj
@@ -18,11 +18,25 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Interfaces.h" />
+    <ClInclude Include="Inventory.h" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemModifier.h" />
+    <ClInclude Include="ItemStorage.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="Item.cpp" />
+    <ClCompile Include="ItemModifier.cpp" />
+    <ClCompile Include="ItemStorage.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ef50c747-d923-4072-8177-a6b17d836c13}</ProjectGuid>
-    <RootNamespace>CrazyPandaTestTask</RootNamespace>
+    <ProjectGuid>{b33ef6f8-5e24-471e-b926-f23a1be65993}</ProjectGuid>
+    <RootNamespace>CrazyPandaTestTask2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -138,20 +152,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Inventory.cpp" />
-    <ClCompile Include="ItemFilter.cpp" />
-    <ClCompile Include="ItemModifier.cpp" />
-    <ClCompile Include="CrazyPandaTestTask.cpp" />
-    <ClCompile Include="Item.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Inventory.h" />
-    <ClInclude Include="ItemFilter.h" />
-    <ClInclude Include="ItemInterface.h" />
-    <ClInclude Include="ItemModifier.h" />
-    <ClInclude Include="Item.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
